dist/1.0/bin/sample/retrieveUnpackaged/objects/Direction__c.object
<CustomObject>
    <description>List of Directions available under specified Banding Model; only for Directions specified here it will be possible to define discounts</description>
    <fields>
        <fullName>Banding_Model_ID__c</fullName>
        <description>BandingModel Record Id for which this Direction is available</description>
        <inlineHelpText>BandingModel Record Id for which this Direction is available</inlineHelpText>
        <label>BandingModel</label>
        <referenceTo>Banding_Model__c</referenceTo>
        <relationshipLabel>Directions</relationshipLabel>
        <relationshipName>Directions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <description>Id from Durian</description>
        <externalId>true</externalId>
        <inlineHelpText>Technical field for SK Billing</inlineHelpText>
        <label>Billing ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_ID__c</fullName>
        <description>ID of Calendar (TimeZone) in Billing System [PL specific information] 
Implemented as a part of Release October (PRISRAII-42)</description>
        <inlineHelpText>ID of Calendar (TimeZone) in Billing System [PL specific information]</inlineHelpText>
        <label>Calendar ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direction_ID__c</fullName>
        <description>ID of Direction in Billing System [PL specific information] 
Implemented as a part of Release October (PRISRAII-42)</description>
        <inlineHelpText>ID of Direction in Billing System [PL specific information]</inlineHelpText>
        <label>Direction ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_SVK__c</fullName>
        <description>Label</description>
        <inlineHelpText>Label</inlineHelpText>
        <label>Name (SVK)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Specifies the order in which Directions are displayed in Product Configurator - added in SK RECOVERY project</description>
        <inlineHelpText>Specifies the order in which Directions are displayed in Product Configurator</inlineHelpText>
        <label>Sequence No</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Unique Source Record Id which can be used for data synchronization between different systems</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Source Record Id which can be used for data synchronization between different systems</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <description>Time zone for this direction.</description>
        <inlineHelpText>Time zone for this direction.</inlineHelpText>
        <label>TimeZone</label>
        <picklist>
            <picklistValues>
                <fullName>nerozlíšené</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>silné</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>slabé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DuV silné</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DuV slabé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DuV happy hour</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Direction_ID__c</fullName>
        <description>Automatically Generated Direction ID (Direction ID + Calendar ID) used to verify uniqueness of this pair; Implemented as a part of Release October (PRISRAII-42)</description>
        <inlineHelpText>Automatically Generated Direction ID (Direction ID + Calendar ID) used to verify uniqueness of this pair</inlineHelpText>
        <label>Unique Direction ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Direction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Directions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>